* Rename `kafka-consumer` to `kafka-publisher` and all the respective properties and configurations (even function name) to avoid confusion with `KafkaConsumer` at a glance * Add `kafka-sink` into apps metadata properties

--- a/applications/sink/kafka-sink/pom.xml
+++ b/applications/sink/kafka-sink/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
-			<artifactId>kafka-consumer</artifactId>
+			<artifactId>kafka-publisher</artifactId>
 		</dependency>
 
 		<dependency>
@@ -52,13 +52,13 @@
 						<type>sink</type>
 						<version>${project.version}</version>
 						<configClass>AUTOCONFIGURATION</configClass>
-						<functionDefinition>kafkaConsumer</functionDefinition>
+						<functionDefinition>kafkaPublisher</functionDefinition>
 
 						<maven>
 							<dependencies>
 								<dependency>
 									<groupId>org.springframework.cloud.fn</groupId>
-									<artifactId>kafka-consumer</artifactId>
+									<artifactId>kafka-publisher</artifactId>
 								</dependency>
 							</dependencies>
 						</maven>
