--- a/applications/sink/kafka-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/kafka-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.consumer.kafka.KafkaConsumerProperties, \
+configuration-properties.classes=org.springframework.cloud.fn.consumer.kafka.KafkaPublisherProperties, \
   org.springframework.boot.autoconfigure.kafka.KafkaProperties
