--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -56,6 +56,8 @@ sink.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-
 sink.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-kafka/@apps.version@/ftp-sink-kafka-@apps.version@-metadata.jar
 sink.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-kafka/@apps.version@/jdbc-sink-kafka-@apps.version@.jar
 sink.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-kafka/@apps.version@/jdbc-sink-kafka-@apps.version@-metadata.jar
+sink.kafka=https://@repo-spring-io@/org/springframework/cloud/stream/app/kafka-sink-kafka/@apps.version@/kafka-sink-kafka-@apps.version@.jar
+sink.kafka.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/kafka-sink-kafka/@apps.version@/kafka-sink-kafka-@apps.version@-metadata.jar
 sink.log=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-kafka/@apps.version@/log-sink-kafka-@apps.version@.jar
 sink.log.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-kafka/@apps.version@/log-sink-kafka-@apps.version@-metadata.jar
 sink.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-kafka/@apps.version@/mongodb-sink-kafka-@apps.version@.jar
