--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -27,6 +27,7 @@ sink.wavefront=docker:springcloudstream/wavefront-sink-rabbit:@apps.docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@apps.docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-rabbit:@apps.docker.tag@
 sink.jdbc=docker:springcloudstream/jdbc-sink-rabbit:@apps.docker.tag@
+sink.kafka=docker:springcloudstream/kafka-sink-rabbit:@apps.docker.tag@
 sink.log=docker:springcloudstream/log-sink-rabbit:@apps.docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-rabbit:@apps.docker.tag@
 sink.mqtt=docker:springcloudstream/mqtt-sink-rabbit:@apps.docker.tag@
