--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-harbor.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-harbor.properties
@@ -27,6 +27,7 @@ sink.wavefront=docker:projects.registry.vmware.com/springcloudstream/wavefront-s
 sink.file=docker:projects.registry.vmware.com/springcloudstream/file-sink-rabbit:@apps.harbor.version@
 sink.ftp=docker:projects.registry.vmware.com/springcloudstream/ftp-sink-rabbit:@apps.harbor.version@
 sink.jdbc=docker:projects.registry.vmware.com/springcloudstream/jdbc-sink-rabbit:@apps.harbor.version@
+sink.kafka=docker:projects.registry.vmware.com/springcloudstream/kafka-sink-rabbit:@apps.harbor.version@
 sink.log=docker:projects.registry.vmware.com/springcloudstream/log-sink-rabbit:@apps.harbor.version@
 sink.mongodb=docker:projects.registry.vmware.com/springcloudstream/mongodb-sink-rabbit:@apps.harbor.version@
 sink.mqtt=docker:projects.registry.vmware.com/springcloudstream/mqtt-sink-rabbit:@apps.harbor.version@
