--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -56,6 +56,8 @@ sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:@apps.vers
 sink.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:jar:metadata:@apps.version@
 sink.jdbc=maven://org.springframework.cloud.stream.app:jdbc-sink-rabbit:@apps.version@
 sink.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-sink-rabbit:jar:metadata:@apps.version@
+sink.kafka=maven://org.springframework.cloud.stream.app:kafka-sink-rabbit:@apps.version@
+sink.kafka.metadata=maven://org.springframework.cloud.stream.app:kafka-sink-rabbit:jar:metadata:@apps.version@
 sink.log=maven://org.springframework.cloud.stream.app:log-sink-rabbit:@apps.version@
 sink.log.metadata=maven://org.springframework.cloud.stream.app:log-sink-rabbit:jar:metadata:@apps.version@
 sink.mongodb=maven://org.springframework.cloud.stream.app:mongodb-sink-rabbit:@apps.version@
