--- a/functions/consumer/pom.xml
+++ b/functions/consumer/pom.xml
@@ -18,7 +18,7 @@
 		<module>file-consumer</module>
 		<module>ftp-consumer</module>
 		<module>jdbc-consumer</module>
-		<module>kafka-consumer</module>
+		<module>kafka-publisher</module>
 		<module>log-consumer</module>
 		<module>mongodb-consumer</module>
 		<module>mqtt-consumer</module>
