--- a/functions/common/mongodb-common/pom.xml
+++ b/functions/common/mongodb-common/pom.xml
@@ -18,6 +18,7 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mongodb</artifactId>
+            <version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
     </dependencies>
