--- a/functions/consumer/cassandra-consumer/pom.xml
+++ b/functions/consumer/cassandra-consumer/pom.xml
@@ -26,6 +26,7 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>cassandra</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
