--- a/functions/consumer/mongodb-consumer/pom.xml
+++ b/functions/consumer/mongodb-consumer/pom.xml
@@ -26,6 +26,7 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mongodb</artifactId>
+            <version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
