--- a/functions/consumer/redis-consumer/pom.xml
+++ b/functions/consumer/redis-consumer/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
