--- a/functions/function/aggregator-function/pom.xml
+++ b/functions/function/aggregator-function/pom.xml
@@ -37,6 +37,7 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mongodb</artifactId>
+            <version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
