--- a/functions/supplier/mongodb-supplier/pom.xml
+++ b/functions/supplier/mongodb-supplier/pom.xml
@@ -36,6 +36,7 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mongodb</artifactId>
+            <version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
