--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -51,7 +51,7 @@
 
         <groovy.version>4.0.5</groovy.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-
+        <mavenThreads>1</mavenThreads>
     </properties>
 
     <url>https://spring.io/projects/spring-cloud-stream-applications</url>
@@ -151,7 +151,7 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <parallel>classes</parallel>
-                    <forkCount>0.25C</forkCount>
+                    <forkCount>${mavenThreads}</forkCount>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
             </plugin>
@@ -329,7 +329,7 @@
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
                             <parallel>classes</parallel>
-                            <forkCount>0.25C</forkCount>
+                            <forkCount>${mavenThreads}</forkCount>
                             <excludedGroups>integration</excludedGroups>
                         </configuration>
                     </plugin>
@@ -346,7 +346,7 @@
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
                             <parallel>classes</parallel>
-                            <forkCount>0.25C</forkCount>
+                            <forkCount>${mavenThreads}</forkCount>
                             <groups>integration</groups>
                         </configuration>
                     </plugin>
