--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -16,9 +16,25 @@
     </properties>
     <repositories>
         <repository>
-            <id>spring-release</id>
-            <name>spring-release</name>
-            <url>https://repo.spring.io/release</url>
+            <id>maven-central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
     <dependencies>
