--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -35,22 +35,23 @@
         <nohttp-checkstyle.version>0.0.10</nohttp-checkstyle.version>
         <disable.nohttp.checks>true</disable.nohttp.checks>
         <spring-javaformat-checkstyle.version>0.0.35</spring-javaformat-checkstyle.version>
+
         <spring-boot.version>3.0.7</spring-boot.version>
         <spring-kafka.version>3.0.7</spring-kafka.version>
         <spring-rabbit.version>3.0.4</spring-rabbit.version>
         <spring.version>6.0.9</spring.version>
         <spring-integration.version>6.0.5</spring-integration.version>
 
-        <spring-cloud.version>2022.0.2</spring-cloud.version>
-        <spring-cloud-starters.version>4.0.2</spring-cloud-starters.version>
-        <spring-cloud-function.version>4.0.2</spring-cloud-function.version>
-        <spring-cloud-stream-dependencies.version>4.0.2</spring-cloud-stream-dependencies.version>
-        <test-containers.version>1.17.6</test-containers.version>
+        <spring-cloud.version>2022.0.3</spring-cloud.version>
+        <spring-cloud-starters.version>4.0.3</spring-cloud-starters.version>
+        <spring-cloud-function.version>4.0.3</spring-cloud-function.version>
+        <spring-cloud-stream-dependencies.version>4.0.3</spring-cloud-stream-dependencies.version>
+        <testcontainers.version>1.18.3</testcontainers.version>
         <mockserver.version>5.13.2</mockserver.version>
 
         <groovy.version>4.0.5</groovy.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-
+        <mavenThreads>1</mavenThreads>
     </properties>
 
     <url>https://spring.io/projects/spring-cloud-stream-applications</url>
@@ -86,7 +87,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
-                <version>${test-containers.version}</version>
+                <version>${testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -150,7 +151,7 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <parallel>classes</parallel>
-                    <forkCount>0.25C</forkCount>
+                    <forkCount>${mavenThreads}</forkCount>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
             </plugin>
@@ -328,7 +329,7 @@
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
                             <parallel>classes</parallel>
-                            <forkCount>0.25C</forkCount>
+                            <forkCount>${mavenThreads}</forkCount>
                             <excludedGroups>integration</excludedGroups>
                         </configuration>
                     </plugin>
@@ -345,7 +346,7 @@
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
                             <parallel>classes</parallel>
-                            <forkCount>0.25C</forkCount>
+                            <forkCount>${mavenThreads}</forkCount>
                             <groups>integration</groups>
                         </configuration>
                     </plugin>
