--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -3,6 +3,7 @@ source.file=docker:springcloudstream/file-source-kafka:@apps.docker.tag@
 source.ftp=docker:springcloudstream/ftp-source-kafka:@apps.docker.tag@
 source.http=docker:springcloudstream/http-source-kafka:@apps.docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-kafka:@apps.docker.tag@
+source.kafka=docker:springcloudstream/kafka-source-kafka:@apps.docker.tag@
 source.jms=docker:springcloudstream/jms-source-kafka:@apps.docker.tag@
 source.load-generator=docker:springcloudstream/load-generator-source-kafka:@apps.docker.tag@
 source.mail=docker:springcloudstream/mail-source-kafka:@apps.docker.tag@
