--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -4,6 +4,7 @@ source.ftp=docker:springcloudstream/ftp-source-rabbit:@apps.docker.tag@
 source.http=docker:springcloudstream/http-source-rabbit:@apps.docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-rabbit:@apps.docker.tag@
 source.jms=docker:springcloudstream/jms-source-rabbit:@apps.docker.tag@
+source.kafka=docker:springcloudstream/kafka-source-rabbit:@apps.docker.tag@
 source.load-generator=docker:springcloudstream/load-generator-source-rabbit:@apps.docker.tag@
 source.mail=docker:springcloudstream/mail-source-rabbit:@apps.docker.tag@
 source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@apps.docker.tag@
