--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-harbor.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-harbor.properties
@@ -4,6 +4,7 @@ source.ftp=docker:projects.registry.vmware.com/springcloudstream/ftp-source-rabb
 source.http=docker:projects.registry.vmware.com/springcloudstream/http-source-rabbit:@apps.harbor.version@
 source.jdbc=docker:projects.registry.vmware.com/springcloudstream/jdbc-source-rabbit:@apps.harbor.version@
 source.jms=docker:projects.registry.vmware.com/springcloudstream/jms-source-rabbit:@apps.harbor.version@
+source.kafka=docker:projects.registry.vmware.com/springcloudstream/kafka-source-rabbit:@apps.harbor.version@
 source.load-generator=docker:projects.registry.vmware.com/springcloudstream/load-generator-source-rabbit:@apps.harbor.version@
 source.mail=docker:projects.registry.vmware.com/springcloudstream/mail-source-rabbit:@apps.harbor.version@
 source.mongodb=docker:projects.registry.vmware.com/springcloudstream/mongodb-source-rabbit:@apps.harbor.version@
