--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -10,6 +10,8 @@ source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-s
 source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@apps.version@/jdbc-source-rabbit-@apps.version@-metadata.jar
 source.jms=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-rabbit/@apps.version@/jms-source-rabbit-@apps.version@.jar
 source.jms.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-rabbit/@apps.version@/jms-source-rabbit-@apps.version@-metadata.jar
+source.kafka=https://@repo-spring-io@/org/springframework/cloud/stream/app/kafka-source-rabbit/@apps.version@/kafka-source-rabbit-@apps.version@.jar
+source.kafka.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/kafka-source-rabbit/@apps.version@/kafka-source-rabbit-@apps.version@-metadata.jar
 source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@apps.version@/load-generator-source-rabbit-@apps.version@.jar
 source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@apps.version@/load-generator-source-rabbit-@apps.version@-metadata.jar
 source.mail=https://@repo-spring-io@/org/springframework/cloud/stream/app/mail-source-rabbit/@apps.version@/mail-source-rabbit-@apps.version@.jar
