--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -10,6 +10,8 @@ source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:@app
 source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:jar:metadata:@apps.version@
 source.jms=maven://org.springframework.cloud.stream.app:jms-source-rabbit:@apps.version@
 source.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-rabbit:jar:metadata:@apps.version@
+source.kafka=maven://org.springframework.cloud.stream.app:kafka-source-rabbit:@apps.version@
+source.kafka.metadata=maven://org.springframework.cloud.stream.app:kafka-source-rabbit:jar:metadata:@apps.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:@apps.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:jar:metadata:@apps.version@
 source.mail=maven://org.springframework.cloud.stream.app:mail-source-rabbit:@apps.version@
