--- a/functions/function-dependencies/pom.xml
+++ b/functions/function-dependencies/pom.xml
@@ -59,6 +59,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud.fn</groupId>
+                <artifactId>kafka-supplier</artifactId>
+               <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud.fn</groupId>
                 <artifactId>mongodb-supplier</artifactId>
                <version>${project.version}</version>
             </dependency>
