* Fix language in READMEs * Fix Dataflow props for nested classes from the `KafkaProperties` * Make same fix for `kafka-sink` * Add `KafkaSupplierProperties.recordFilter` SpEL property

--- a/applications/sink/kafka-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/kafka-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,3 @@
 configuration-properties.classes=org.springframework.cloud.fn.consumer.kafka.KafkaPublisherProperties, \
-  org.springframework.boot.autoconfigure.kafka.KafkaProperties
+  org.springframework.boot.autoconfigure.kafka.KafkaProperties, \
+org.springframework.boot.autoconfigure.kafka.KafkaProperties$Producer
