GH-475: Add some missed nested props for apps
Fixes https://github.com/spring-cloud/stream-applications/issues/475

* Fix JDBC props for limited listed number of them

--- a/applications/processor/aggregator-processor/pom.xml
+++ b/applications/processor/aggregator-processor/pom.xml
@@ -25,6 +25,10 @@
         <plugins>
             <plugin>
                 <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dataflow-apps-docs-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
                 <configuration>
                     <application>
