--- a/applications/processor/aggregator-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/processor/aggregator-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,4 +1,16 @@
 configuration-properties.classes=org.springframework.cloud.fn.aggregator.AggregatorFunctionProperties,\
   org.springframework.boot.autoconfigure.mongo.MongoProperties,\
+  org.springframework.boot.autoconfigure.mongo.MongoProperties$Ssl,\
+  org.springframework.boot.autoconfigure.mongo.MongoProperties$Gridfs, \
   org.springframework.boot.autoconfigure.data.redis.RedisProperties,\
-  org.springframework.boot.autoconfigure.jdbc.DataSourceProperties
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Sentinel,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Cluster,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Ssl,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Jedis,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Lettuce,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Pool
+configuration-properties.names=\
+spring.datasource.url,\
+spring.datasource.driver-class-name,\
+spring.datasource.username,\
+spring.datasource.password
