--- a/applications/sink/cassandra-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/cassandra-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,9 @@
-configuration-properties.classes=CassandraConsumerProperties, \
-  CassandraClusterProperties, \
-  org.springframework.boot.autoconfigure.cassandra.CassandraProperties
+configuration-properties.classes=org.springframework.cloud.fn.consumer.cassandra.CassandraConsumerProperties, \
+  org.springframework.cloud.fn.consumer.cassandra.cluster.CassandraClusterProperties, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties$Ssl, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties$Connection, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties$Pool, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties$Request, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties$Controlconnection, \
+  org.springframework.boot.autoconfigure.cassandra.CassandraProperties$Throttler
