--- a/applications/sink/kafka-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/kafka-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,4 @@
 configuration-properties.classes=org.springframework.cloud.fn.consumer.kafka.KafkaPublisherProperties, \
   org.springframework.boot.autoconfigure.kafka.KafkaProperties, \
-org.springframework.boot.autoconfigure.kafka.KafkaProperties$Producer
+org.springframework.boot.autoconfigure.kafka.KafkaProperties$Producer, \
+org.springframework.boot.autoconfigure.kafka.KafkaProperties$Template
