--- a/applications/sink/redis-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/redis-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,5 +1,8 @@
 configuration-properties.classes=org.springframework.cloud.fn.consumer.redis.RedisConsumerProperties, \
-  org.springframework.boot.autoconfigure.data.redis.RedisProperties, \
-  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Pool, \
-  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Sentinel
-
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Sentinel,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Cluster,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Ssl,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Jedis,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Lettuce,\
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Pool
