--- a/applications/source/jdbc-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/jdbc-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -4,7 +4,4 @@ configuration-properties.names=\
 spring.datasource.url,\
 spring.datasource.driver-class-name,\
 spring.datasource.username,\
-spring.datasource.password,\
-spring.datasource.schema,\
-spring.datasource.data,\
-spring.datasource.initialization-mode
+spring.datasource.password
