--- a/applications/source/mongodb-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/mongodb-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,4 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.mongo.MongodbSupplierProperties,\
-  org.springframework.boot.autoconfigure.mongo.MongoProperties
-
+  org.springframework.boot.autoconfigure.mongo.MongoProperties,\
+  org.springframework.boot.autoconfigure.mongo.MongoProperties$Ssl,\
+  org.springframework.boot.autoconfigure.mongo.MongoProperties$Gridfs
