--- a/applications/source/rabbit-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/rabbit-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,4 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.rabbit.RabbitSupplierProperties, \
-  org.springframework.boot.autoconfigure.amqp.RabbitProperties
+  org.springframework.boot.autoconfigure.amqp.RabbitProperties, \
+  org.springframework.boot.autoconfigure.amqp.RabbitProperties$Listener, \
+  org.springframework.boot.autoconfigure.amqp.RabbitProperties$SimpleContainer
