--- a/applications/source/s3-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/s3-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -2,9 +2,8 @@ configuration-properties.classes=org.springframework.cloud.fn.supplier.s3.AwsS3S
   org.springframework.cloud.fn.common.file.FileConsumerProperties,\
   org.springframework.cloud.fn.common.aws.s3.AmazonS3Properties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Redis, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$DynamoDb, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Jdbc, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Zookeeper, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Mongo \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Mongo
