--- a/applications/sink/jdbc-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/jdbc-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -3,7 +3,4 @@ configuration-properties.names=\
 spring.datasource.url,\
 spring.datasource.driver-class-name,\
 spring.datasource.username,\
-spring.datasource.password,\
-spring.datasource.schema,\
-spring.datasource.data,\
-spring.datasource.initialization-mode
+spring.datasource.password
