--- a/applications/sink/rabbit-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/rabbit-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,3 @@
 configuration-properties.classes=org.springframework.cloud.fn.consumer.rabbit.RabbitConsumerProperties, \
-  org.springframework.boot.autoconfigure.amqp.RabbitProperties
+  org.springframework.boot.autoconfigure.amqp.RabbitProperties, \
+  org.springframework.boot.autoconfigure.amqp.RabbitProperties$Template
