--- a/functions/common/debezium-autoconfigure/pom.xml
+++ b/functions/common/debezium-autoconfigure/pom.xml
@@ -15,7 +15,7 @@
     <description>Debezium Spring Boot auto-configuration</description>
 
     <properties>
-        <version.debezium>2.2.1.Final</version.debezium>
+        <version.debezium>2.3.0.CR1</version.debezium>
         <apicurio.version>2.4.2.Final</apicurio.version>
     </properties>
 
