--- a/.github/workflows/ci-it.yml
+++ b/.github/workflows/ci-it.yml
@@ -5,14 +5,14 @@ on:
     inputs:
       version:
         required: false
-        description: 'Branch to use for Integration Tests'
+        description: 'Version of containers to use for Integration Tests'
 
 env:
   MAIN_PATH: 'build-dir'
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   MAVEN_THREADS: 'true'
 jobs:
-  build:
+  test:
     if: github.repository == 'spring-cloud/stream-applications'
     runs-on: ubuntu-latest
     steps:
@@ -26,18 +26,27 @@ jobs:
       - name: 'Configure: Ensure scripts are executable'
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
+      - name: 'Determine Java Version'
+        id: determineJavaVersion
+        run: |
+          if [[ "github.base_ref" == *"4.0.0"* ]]
+            JAVA_VERSION=17
+          else
+            JAVA_VERSION=8
+          fi
+          echo "JAVA_VERSION=$JAVA_VERSION" >> $GITHUB_ENV
+
       - name: 'Configure: Install Java'
-        if: ${{ github.base_ref != 'main' }}
+        if: ${{ env.JAVA_VERSION == '8' }}
         uses: actions/setup-java@v1
         with:
           java-version: 8
       - name: 'Configure: Install GraalVM'
-        if: ${{ github.base_ref == 'main' }}
+        if: ${{ env.JAVA_VERSION != '8' }}
         uses: graalvm/setup-graalvm@v1
         with:
           version: 'latest'
           java-version: '17'
-          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -50,7 +59,7 @@ jobs:
             maven-repo-
       - name: 'Configure: Install xsltproc'
         uses: ./.github/actions/install-xsltproc
-      - name: 'Action: verify changed modules'
+      - name: 'Action: Execute Integration Tests'
         shell: bash
         env:
           VERBOSE: ${{ github.debug && 'true' || '' }}
